--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,14 @@ services:
     container_name: bitcoind-main
     restart: unless-stopped
     volumes:
-      - ./bitcoin-main:/home/bitcoin/.bitcoin
-    command: ["bitcoind","-conf=/home/bitcoin/.bitcoin/bitcoin.conf","-printtoconsole"]
+      - bitcoin-main-data:/home/bitcoin/.bitcoin
+      - ./bitcoin-main:/etc/bitcoin:ro
+    command: [
+      "bitcoind",
+      "-conf=/etc/bitcoin/bitcoin.conf",
+      "-datadir=/home/bitcoin/.bitcoin",
+      "-printtoconsole"
+    ]
     ports:
       - "8333:8333"   # P2P mainnet
     healthcheck:
@@ -21,8 +27,14 @@ services:
     container_name: bitcoind-testnet
     restart: unless-stopped
     volumes:
-      - ./bitcoin-testnet:/home/bitcoin/.bitcoin
-    command: ["bitcoind","-conf=/home/bitcoin/.bitcoin/bitcoin.conf","-printtoconsole"]
+      - bitcoin-testnet-data:/home/bitcoin/.bitcoin
+      - ./bitcoin-testnet:/etc/bitcoin:ro
+    command: [
+      "bitcoind",
+      "-conf=/etc/bitcoin/bitcoin.conf",
+      "-datadir=/home/bitcoin/.bitcoin",
+      "-printtoconsole"
+    ]
     ports:
       - "18333:18333" # P2P testnet
     healthcheck:
@@ -41,7 +53,7 @@ services:
     command: >
       bfgminer -S noauto -o http://bitcoin-main:8332 -O ${RPC_USER}:${RPC_PASSWORD}
       --stratum-port 3333 --coinbase-addr ${PAYOUT_ADDRESS}
-      --no-getwork --no-monitor --no-submit-stale
+      --no-getwork --no-submit-stale
     env_file: .env
     ports:
       - "3333:3333"   # Stratum mainnet
@@ -56,7 +68,7 @@ services:
     command: >
       bfgminer -S noauto -o http://bitcoin-testnet:18332 -O ${RPC_USER_TESTNET}:${RPC_PASSWORD_TESTNET}
       --stratum-port 13333 --coinbase-addr ${PAYOUT_ADDRESS_TESTNET}
-      --no-getwork --no-monitor --no-submit-stale
+      --no-getwork --no-submit-stale
     env_file: .env
     ports:
       - "13333:13333" # Stratum testnet
@@ -84,3 +96,7 @@ services:
       - ./ckpool/ckpool.testnet.conf:/srv/ckpool/ckpool.conf:ro
     ports:
       - "13334:3333"  # expose as 13334 (container listens 3333)
+
+volumes:
+  bitcoin-main-data:
+  bitcoin-testnet-data:
