--- a/ckpool/ckpool.mainnet.conf
+++ b/ckpool/ckpool.mainnet.conf
@@ -1,7 +1,7 @@
 {
   "btcd": [
     {
-      "url": "bitcoin-main:8332",
+      "url": "bitcoind-main:8332",
       "auth": "rpcuser_main",
       "pass": "rpcpass_main",
       "notify": true
