--- a/ckpool/ckpool.testnet.conf
+++ b/ckpool/ckpool.testnet.conf
@@ -1,7 +1,7 @@
 {
   "btcd": [
     {
-      "url": "bitcoin-testnet:18332",
+      "url": "bitcoind-testnet:18332",
       "auth": "rpcuser_test",
       "pass": "rpcpass_test",
       "notify": true
