--- a/ckpool/ckpool.mainnet.conf
+++ b/ckpool/ckpool.mainnet.conf
@@ -2,7 +2,7 @@
   "btcd": [
     {
       "url": "bitcoind-main:8332",
-      "auth": "rpcuser_main",
+      "user": "rpcuser_main",
       "pass": "rpcpass_main",
       "notify": true
     }
