--- a/ckpool/ckpool.testnet.conf
+++ b/ckpool/ckpool.testnet.conf
@@ -2,7 +2,7 @@
   "btcd": [
     {
       "url": "bitcoind-testnet:18332",
-      "auth": "rpcuser_test",
+      "user": "rpcuser_test",
       "pass": "rpcpass_test",
       "notify": true
     }
