--- a/ckpool/ckpool.testnet.conf
+++ b/ckpool/ckpool.testnet.conf
@@ -2,6 +2,8 @@
   "btcd": [
     {
       "url": "http://bitcoind-testnet:18332",
+      "host": "bitcoind-testnet",
+      "port": 18332,      
       "user": "rpcuser_test",
       "pass": "rpcpass_test",
       "notify": true
