--- a/ckpool/ckpool.mainnet.conf
+++ b/ckpool/ckpool.mainnet.conf
@@ -2,6 +2,8 @@
   "btcd": [
     {
       "url": "http://bitcoind-main:8332",
+      "host": "bitcoind-main",
+      "port": 8332,      
       "user": "rpcuser_main",
       "pass": "rpcpass_main",
       "notify": true
