--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,13 +48,13 @@ services:
     image: wernight/bfgminer:latest
     container_name: bfgminer-proxy-main
     depends_on:
-      - bitcoin-main
+      bitcoin-main:
+        condition: service_healthy
     restart: unless-stopped
     environment:
       TERM: xterm
     command: >
-      bfgminer -S noauto -o http://bitcoind-main:8332
-      -O ${RPC_USER:-rpcuser_main}:${RPC_PASSWORD:-rpcpass_main}
+      bfgminer -S noauto -o http://${RPC_USER:-rpcuser_main}:${RPC_PASSWORD:-rpcpass_main}@bitcoind-main:8332
       --stratum-port 3333 --coinbase-addr ${PAYOUT_ADDRESS:-1D7VcBnYgCW6zqNP4NmdS4kia4yLGHNfw}
       --no-getwork --no-submit-stale
     env_file: .env
@@ -66,13 +66,13 @@ services:
     image: wernight/bfgminer:latest
     container_name: bfgminer-proxy-testnet
     depends_on:
-      - bitcoin-testnet
+      bitcoin-testnet:
+        condition: service_healthy
     restart: unless-stopped
     environment:
       TERM: xterm
     command: >
-      bfgminer -S noauto -o http://bitcoind-testnet:18332
-      -O ${RPC_USER_TESTNET:-rpcuser_test}:${RPC_PASSWORD_TESTNET:-rpcpass_test}
+      bfgminer -S noauto -o http://${RPC_USER_TESTNET:-rpcuser_test}:${RPC_PASSWORD_TESTNET:-rpcpass_test}@bitcoind-testnet:18332
       --stratum-port 13333 --coinbase-addr ${PAYOUT_ADDRESS_TESTNET:-mzpJE5cWrFzGuVr1SidxEsRBDgFgPC5VmD}
       --no-getwork --no-submit-stale
     env_file: .env
@@ -84,7 +84,8 @@ services:
     image: pinkyswear/ckpool-solo:latest
     container_name: ckpool-solo-main
     depends_on:
-      - bitcoin-main
+      bitcoin-main:
+        condition: service_healthy
     restart: unless-stopped
     volumes:
       - ./ckpool/ckpool.mainnet.conf:/srv/ckpool/ckpool.conf:ro
@@ -96,7 +97,8 @@ services:
     image: pinkyswear/ckpool-solo:latest
     container_name: ckpool-solo-testnet
     depends_on:
-      - bitcoin-testnet
+      bitcoin-testnet:
+        condition: service_healthy
     restart: unless-stopped
     volumes:
       - ./ckpool/ckpool.testnet.conf:/srv/ckpool/ckpool.conf:ro
