--- a/bitcoin-main/bitcoin.conf
+++ b/bitcoin-main/bitcoin.conf
@@ -5,8 +5,9 @@ prune=10000
 
 rpcuser=rpcuser_main
 rpcpassword=rpcpass_main
-rpcbind=0.0.0.0
+rpcbind=::
 rpcallowip=0.0.0.0/0
+rpcallowip=::/0
 rpcport=8332
 
 listen=1
