--- a/bitcoin-testnet/bitcoin.conf
+++ b/bitcoin-testnet/bitcoin.conf
@@ -7,7 +7,9 @@ prune=4096
 rpcuser=rpcuser_test
 rpcpassword=rpcpass_test
 rpcbind=0.0.0.0
+rpcbind=::
 rpcallowip=0.0.0.0/0
+rpcallowip=::/0
 rpcport=18332
 
 listen=1
@@ -18,5 +20,6 @@ maxmempool=200
 
 [test]
 rpcbind=0.0.0.0
+rpcbind=::
 rpcport=18332
 port=18333
