--- a/bitcoin-main/bitcoin.conf
+++ b/bitcoin-main/bitcoin.conf
@@ -6,6 +6,8 @@ prune=10000
 rpcuser=rpcuser_main
 rpcpassword=rpcpass_main
 rpcallowip=0.0.0.0/0
+rpcallowip=::/0
+rpcbind=0.0.0.0
 rpcport=8332
 
 listen=1
