--- a/ckpool/ckpool.mainnet.conf
+++ b/ckpool/ckpool.mainnet.conf
@@ -1,9 +1,9 @@
 {
   "btcd": [
     {
-      "url": "http://bitcoind-main:8332",
-      "host": "bitcoind-main",
-      "port": 8332,      
+      "url": "http://bitcoin-main:8332",
+      "host": "bitcoin-main",
+      "port": 8332,
       "user": "rpcuser_main",
       "pass": "rpcpass_main",
       "notify": true
