--- a/ckpool/ckpool.testnet.conf
+++ b/ckpool/ckpool.testnet.conf
@@ -1,9 +1,9 @@
 {
   "btcd": [
     {
-      "url": "http://bitcoind-testnet:18332",
-      "host": "bitcoind-testnet",
-      "port": 18332,      
+      "url": "http://bitcoin-testnet:18332",
+      "host": "bitcoin-testnet",
+      "port": 18332,
       "user": "rpcuser_test",
       "pass": "rpcpass_test",
       "notify": true
