--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,7 +54,8 @@ services:
     environment:
       TERM: xterm
     command: >
-      bfgminer -S noauto -o http://${RPC_USER:-rpcuser_main}:${RPC_PASSWORD:-rpcpass_main}@bitcoin-main:8332
+      bfgminer -S noauto -o http://${BITCOIN_MAIN_RPC_HOST:-bitcoin-main}:${BITCOIN_MAIN_RPC_PORT:-8332}
+      -O ${RPC_USER:-rpcuser_main}:${RPC_PASSWORD:-rpcpass_main}
       --stratum-port 3333 --coinbase-addr ${PAYOUT_ADDRESS:-1D7VcBnYgCW6zqNP4NmdS4kia4yLGHNfw}
       --no-submit-stale
     env_file: .env
@@ -87,9 +88,31 @@ services:
       bitcoin-main:
         condition: service_healthy
     restart: unless-stopped
-    volumes:
-      - ./ckpool/ckpool.mainnet.conf:/etc/ckpool/ckpool.conf:ro
-      - ./ckpool/ckpool.mainnet.conf:/etc/ckpool/ckpool.conf.json:ro
+    env_file: .env
+    command: |
+      /bin/sh -c 'cat <<EOF >/tmp/ckpool.conf
+      {
+        "btcd": [
+          {
+            "url": "http://$${BITCOIN_MAIN_RPC_HOST:-bitcoin-main}:$${BITCOIN_MAIN_RPC_PORT:-8332}",
+            "host": "$${BITCOIN_MAIN_RPC_HOST:-bitcoin-main}",
+            "port": $${BITCOIN_MAIN_RPC_PORT:-8332},
+            "user": "$${RPC_USER:-rpcuser_main}",
+            "pass": "$${RPC_PASSWORD:-rpcpass_main}",
+            "notify": true
+          }
+        ],
+        "btcaddress": "$${PAYOUT_ADDRESS:-1D7VcBnYgCW6zqNP4NmdS4kia4yLGHNfw}",
+        "btcsig": "/Solo via ckpool/",
+        "blockpoll": 100,
+        "nonce1length": 4,
+        "nonce2length": 8,
+        "update_interval": 30,
+        "mindiff": 1,
+        "startdiff": 32
+      }
+      EOF
+      exec ckpool -E -c /tmp/ckpool.conf'
     ports:
       - "3334:3333"   # expose as 3334 (container listens 3333)
 
@@ -101,9 +124,31 @@ services:
       bitcoin-testnet:
         condition: service_healthy
     restart: unless-stopped
-    volumes:
-      - ./ckpool/ckpool.testnet.conf:/etc/ckpool/ckpool.conf:ro
-      - ./ckpool/ckpool.testnet.conf:/etc/ckpool/ckpool.conf.json:ro
+    env_file: .env
+    command: |
+      /bin/sh -c 'cat <<EOF >/tmp/ckpool.conf
+      {
+        "btcd": [
+          {
+            "url": "http://$${BITCOIN_TESTNET_RPC_HOST:-bitcoin-testnet}:$${BITCOIN_TESTNET_RPC_PORT:-18332}",
+            "host": "$${BITCOIN_TESTNET_RPC_HOST:-bitcoin-testnet}",
+            "port": $${BITCOIN_TESTNET_RPC_PORT:-18332},
+            "user": "$${RPC_USER_TESTNET:-rpcuser_test}",
+            "pass": "$${RPC_PASSWORD_TESTNET:-rpcpass_test}",
+            "notify": true
+          }
+        ],
+        "btcaddress": "$${PAYOUT_ADDRESS_TESTNET:-mzpJE5cWrFzGuVr1SidxEsRBDgFgPC5VmD}",
+        "btcsig": "/Solo via ckpool/",
+        "blockpoll": 100,
+        "nonce1length": 4,
+        "nonce2length": 8,
+        "update_interval": 30,
+        "mindiff": 1,
+        "startdiff": 32
+      }
+      EOF
+      exec ckpool -E -c /tmp/ckpool.conf'
     ports:
       - "13334:3333"  # expose as 13334 (container listens 3333)
 
