--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,7 @@ services:
     environment:
       TERM: xterm
     command: >
-      bfgminer -S noauto -o http://${BITCOIN_TESTNET_RPC_HOST:-bitcoin-testnet}:${BITCOIN_TESTNET_RPC_PORT:-18332}
+      bfgminer -S noauto -o http://${RPC_USER_TESTNET:-rpcuser_test}:${RPC_PASSWORD_TESTNET:-rpcpass_test}@${BITCOIN_TESTNET_RPC_HOST:-bitcoin-testnet}:${BITCOIN_TESTNET_RPC_PORT:-18332}
       -O ${RPC_USER_TESTNET:-rpcuser_test}:${RPC_PASSWORD_TESTNET:-rpcpass_test}
       --stratum-port 13333 --coinbase-addr ${PAYOUT_ADDRESS_TESTNET:-mzpJE5cWrFzGuVr1SidxEsRBDgFgPC5VmD}
       --no-submit-stale
