--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,7 @@ RPC_USER_TESTNET=rpcuser_test
 RPC_PASSWORD_TESTNET=rpcpass_test
 PAYOUT_ADDRESS_TESTNET=mzpJE5cWrFzGuVr1SidxEsRBDgFgPC5VmD
 
-# Optional: uncomment and set to move the blockchain data to a custom path
-# BITCOIN_MAIN_DATA_PATH=G:/solo/bitcoin-main-data
-# BITCOIN_TESTNET_DATA_PATH=G:/solo/bitcoin-testnet-data
-
+# Optional: uncomment and set these if you want to store blockchain data
+# on a custom path (for example on Windows to use the G: drive)
 BITCOIN_MAIN_DATA_PATH=G:/solo/bitcoin-main-data
 BITCOIN_TESTNET_DATA_PATH=G:/solo/bitcoin-testnet-data
