--- a/ckpool/ckpool.mainnet.conf
+++ b/ckpool/ckpool.mainnet.conf
@@ -1,10 +1,8 @@
 {
   "btcd": [
     {
-      "url": "http://bitcoin-main:8332",
-      "host": "bitcoin-main",
-      "port": 8332,
-      "user": "rpcuser_main",
+      "url": "bitcoin-main:8332",
+      "auth": "rpcuser_main",
       "pass": "rpcpass_main",
       "notify": true
     }
