--- a/ckpool/ckpool.testnet.conf
+++ b/ckpool/ckpool.testnet.conf
@@ -1,10 +1,8 @@
 {
   "btcd": [
     {
-      "url": "http://bitcoin-testnet:18332",
-      "host": "bitcoin-testnet",
-      "port": 18332,
-      "user": "rpcuser_test",
+      "url": "bitcoin-testnet:18332",
+      "auth": "rpcuser_test",
       "pass": "rpcpass_test",
       "notify": true
     }
